Canvas blurry effect solved. CSS styles to the splash screen and the game screen

--- a/style.css
+++ b/style.css
@@ -1,8 +1,56 @@
 .navbar>a {
     text-decoration: none;
-    color: black;
-
+    color: #1D032B;
 }
+
+body {
+    background-image: url(/img/background.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.splash-screen {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    margin-top: 8%
+}
+
+.logo-image>img {
+    width: 40%;
+    margin-bottom: 4%
+}
+
+.logo-image,
+.start-button {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+}
+
+
+.start-button>button {
+    align-self: flex-end;
+    text-align: center;
+    width: 350px;
+    height: 100px;
+    text-decoration: none;
+    outline: none;
+    font-family: 'Modak', cursive;
+    font-size: 50px;
+    color: #1D032B;
+    background-color: #E68E2D;
+    border: 8px solid #1D032B;
+    border-radius: 30px;
+    box-shadow: 0 9px #999;
+}
+
+.start-button>button:hover {
+    background-color: #EEBD20;
+}
+
 
 main {
     display: flex;
@@ -28,29 +76,28 @@ main {
 
 .canvas {
     width: 100%;
-    height: 600px;
+    height: 550px;
+    border: 10px solid #1D032B;
 }
 
 .choice {
-    padding: 15px 25px;
-    font-size: 80px;
-    cursor: pointer;
+    font-size: 85px;
     text-align: center;
     text-decoration: none;
     outline: none;
-    color: #fff;
-    background-color: #0059b3;
-    border: none;
+    color: #1D032B;
+    background-color: #E68E2D;
+    border: 7px solid #1D032B;
     border-radius: 25%;
     box-shadow: 0 9px #999;
 }
 
 .choice:hover {
-    background-color: #0080ff;
+    background-color: #EEBD20;
 }
 
 .choice:active {
-    background-color: #0059b3;
+    background-color: #E68E2D;
     box-shadow: 0 5px #666;
     transform: translateY(4px);
 }
